--- a/addwebview/src/main/res/values/attrs.xml
+++ b/addwebview/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <declare-styleable name="MyCustomElement">
-        <attr name="git " format="string"/>
+        <attr name="url" format="string"/>
     </declare-styleable>
 </resources>
